--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,11 +67,17 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  fonts:
+     - family: FilmeAppicons
+       fonts:
+         - asset: assets/fonts/FilmeAppicons.ttf
+     - family: Metropolis
+
+       fonts:
+         - asset: assets/fonts/metropolis/Metropolis-Regular.otf
+         - asset: assets/fonts/metropolis/Metropolis-Semibold.otf
+           weight: 600
+         - asset: assets/fonts/metropolis/Metropolis-Bold.otf
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
