--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter_signin_button: ^2.0.0
   google_sign_in: ^5.1.0
   intl: ^0.17.0
+  flutter_rating_bar: ^4.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
